--- a/style.css
+++ b/style.css
@@ -18,6 +18,24 @@ header a{
   text-decoration: none;
   color: black;
 }
+.footer1{
+  display: flex;
+  justify-content: space-between;
+  width: 1408px;
+  margin: 0 auto;
+}
+.footer1 div{
+  display: inline;
+}
+.footer a{
+  margin-left: 20px;
+  text-decoration: none;
+  color: black;
+}
+footer{
+  padding: 32px 0 32px;
+  background-color: white;
+}
 .container{
   max-width: 928px;
   margin: 0 auto;
@@ -42,7 +60,7 @@ header a{
 }
 .bio img{
   width: 928px;
-  height: 571px;
+  height: 570px;
 }
 .user{
 }
