--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body{
-  background-color: white;
+  background-image: url("https://w-dog.ru/wallpapers/13/5/382605743292394/pticy-polet-solnce.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
   margin: 0;
   padding: 0;
   font-family: 'Texturina', serif;
-  background-color:rgb(255,222,151);
+  background-color:rgb(253,210,85);
   background-repeat:no-repeat;
   color: black;
   background-position: top center;
@@ -51,7 +53,7 @@ footer{
   line-height: 96px;
 }
 .bio{
-  margin-top: 100px;
+  margin-top: 140px;
 }
 .bio h2{
   font-size: 56px;
