--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ footer{
 .bio img{
   width: 928px;
   height: 570px;
+  border-radius: 5px;
+  border-style:groove;
 }
 .user{
 }
@@ -92,4 +94,41 @@ li{
   background-size: 20px 20px;
   background-repeat: no-repeat;
   font-size: 20px;
+}
+.skillh{
+  font-size: 30px;
+  padding-left: 35px;
+  background-image: url("icon-html.svg");
+  background-position:0% 70%;
+  background-repeat: no-repeat;
+}
+dl{
+  margin: 0;
+  padding: 0;
+}
+dd{
+  margin: 0;
+  margin-top: 6px;
+  padding: 0;
+  height: 14px;
+  border: 1px solid #712073;
+  border-radius: 8px;
+}
+dd div{
+  background-color: #080208;
+  height: 12px;
+  border-radius: 8px;
+  margin: 1px;
+}
+.skillc{
+  font-size: 30px;
+  padding-left: 35px;
+  background-image: url("icon-css.svg");
+  background-position:0% 70%;
+  background-repeat: no-repeat;
+}
+.rabota h2{
+  font-size: 56px;
+  line-height: 80px;
+  text-align: center;
 }
