--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ footer{
   padding: 10px;
   padding-top: 0px;
   margin: 0;
-  margin-top: 30px;
+  margin-top: 45px;
   margin-bottom: 10px;
   display:inline-block;
   font-size: 40px;
@@ -130,7 +130,7 @@ dd div{
 }
 .rabota{
   margin-top: 300px;
-  border: 5px ridge yellow;
+  border: 5px ridge rgb(254,185,20);
   padding: 8px;
 }
 .rabota h2{
