--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
   background-position: top center;
 }
 header{
+  padding:10px 0 10px;
   display: flex;
   width: 1408px;
   margin: 0 auto;
