--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
 body{
-  background-image: url("https://w-dog.ru/wallpapers/13/5/382605743292394/pticy-polet-solnce.jpg");
+  background-image: url("https://i1.wallbox.ru/wallpapers/main/201550/f1ffe993f695a66.jpg");
   background-repeat: no-repeat;
   background-position: top center;
   margin: 0;
   padding: 0;
   font-family: 'Texturina', serif;
-  background-color:rgb(253,210,85);
-  background-repeat:no-repeat;
+  background-color:rgb(244,255,255);
   color: black;
-  background-position: top center;
 }
 header{
   padding:10px 0 10px;
@@ -131,7 +129,7 @@ dd div{
 }
 .rabota{
   margin-top: 300px;
-  border: 5px ridge rgb(254,185,20);
+  border: 5px ridge white;
   padding: 8px;
 }
 .rabota h2{
