--- a/style.css
+++ b/style.css
@@ -10,9 +10,58 @@ html{
   background-color:rgb(244,255,255);
   color: black;
 }
+.fff{
+  background-image:url(ggg.svg);
+}
 .butto{
+  position: relative;
   font-size: 20px;
   display: block;
+  background: none;
+  border:none;
+  color:lightgray;
+  padding:0;
+  cursor: pointer;
+}
+.butto::before{
+  transition: transform 0.2s,opacity 0.2s;
+  position: absolute;
+  content:'';
+  width:50%;
+  height: 3px;
+  opacity: 0.6;
+  background-color: white;
+  bottom:0;
+}
+.butto::after{
+  transition: transform 0.2s,opacity 0.2s;
+  bottom:0;
+  opacity: 0.6;
+  left:50%;
+  height: 3px;
+  background-color: white;
+  position: absolute;
+  content:'';
+  width:50%;
+}
+.butto:hover::before{
+transform-origin:0 100%;
+transform: scaleY(0.45) rotate(-90deg)  translateY(-2px);
+opacity: 1;
+}
+.butto:hover::after{
+  opacity: 1;
+transform-origin:100% 100%;
+transform:scaleY(0.45) rotate(90deg)  translateY(-3px);
+}
+.butto:hover{
+  color: white;
+}
+.butto:active{
+transform: translate(0,2px);
+}
+.butto:focus{
+  outline: none;
 }
 .t ul{
   display:flex;
@@ -29,11 +78,61 @@ display: flex;
   display: flex;
 }
 .navig a{
-  margin: 0 10px;
   padding: 5px;
-  border: 2px dashed lightgray;
   color: lightgray;
   border-radius: 5px;
+  border: 2px dashed lightgray;
+}
+.m{
+overflow: hidden;
+transition: transform 0.5s ease;
+}
+.m::before{
+  z-index:-1;
+  position:absolute;
+  display:block;
+  text-align:center;
+  box-sizing: border-box;
+  padding: 50px;
+  color:black;
+  content:'Не придумал что написать';
+  width:100%;
+  height:30%;
+  background-color:lightgray;
+  border-bottom: 2px solid black;
+  font-size: 20px;
+  transform: translateX(-70%);
+  transition: transform 0.5s ease;
+
+}
+.m:hover img{
+  transform: translateX(100%);
+
+}
+.m:hover:after,.m:hover::before{
+
+  transform: translateX(0);
+}
+.m::after{
+  transition: transform 0.5s ease;
+  transform: translateX(-70%);
+  z-index: -1;
+  position:absolute;
+  display:block;
+  text-align:center;
+  box-sizing: border-box;
+  top:30%;
+  padding:50px;
+  color:red;
+  content:'';
+  width:100%;
+  height:70%;
+  background-color:lightgray;
+}
+.navig li{
+  white-space: nowrap;
+  border-radius: 5px;
+  margin: 0 10px;
 }
 a{
   display:block;
@@ -114,26 +213,41 @@ header a{
   text-align: center;
 }
 .bio img{
-  width: 928px;
-  height: 570px;
-  border-radius: 5px;
-  border-style:groove;
+
 }
 .user{
 }
-.osnova .bio h3{
-  padding: 10px;
-  padding-top: 0px;
+.osnova .bio h3:nth-of-type(3){
+  border-top:3px solid rgb(233,109,49);
+  border-right:3px solid rgb(233,109,49);
+  border-left:3px solid rgb(19,161,209);
+  border-bottom:3px solid rgb(19,161,209);
+  border-radius: 3px;
+
+  padding:5px 10px;
   margin: 0;
-  margin-top: 45px;
-  margin-bottom: 10px;
-  display:inline-block;
+  margin-bottom: 20px;
   font-size: 40px;
   line-height: 40px;
   font-weight: 500;
-  border: 2px solid orange;
-  border-radius: 10px;
-  border-style: dashed;
+}
+.osnova .bio h3:nth-of-type(1){
+  background: repeating-linear-gradient(135deg,transparent 0,transparent 5px,lightskyblue 5px,lightskyblue 9px) fixed;
+  padding:5px 10px;
+  margin: 0;
+  font-size: 40px;
+  line-height: 40px;
+  font-weight: 500;
+}
+.osnova .bio h3:nth-of-type(2){
+  padding:5px 10px;
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 40px;
+  line-height: 40px;
+  font-weight: 500;
+  background-image: url(pic.svg),url(ggg.svg);
+
 }
 .none .bio h3{
   padding: 10px;
@@ -149,20 +263,46 @@ header a{
   border-radius: 10px;
   border-style: dashed;
 }
-ul{
+ul{list-style-type:none;
+padding: 0;
+margin: 0;}
+.bio ul:nth-of-type(1){
   list-style-type:none;
   padding: 0;
   margin: 0;
+  text-align: center;
+  margin-bottom: 150px;
+}
+.bio ul:nth-of-type(2){
+  list-style-type:none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  margin-bottom: 150px;
 }
 .bio li{
-  padding-left:25px;
-  background-image:url("https://thehashtagsshowtime.files.wordpress.com/2017/05/cropped-chrome_icon___rarity_by_doctorrarity-d6e57ht.png?w=200");
-  background-position:0% 70%;
-  background-size: 20px 20px;
-  background-repeat: no-repeat;
+  display: inline-block;
+  position: relative;
   font-size: 20px;
+  color:;
+}
+.bio ul:nth-of-type(1) li::after{
+  content:'';
+  bottom:-5.5px;
+  left:0;
+  position: absolute;
+  width:100%;
+  height:8px;
+  background-image: linear-gradient(135deg,transparent 40%,lightskyblue 40%,lightskyblue 60%,transparent 60%),
+  linear-gradient(225deg,transparent 40%,greenyellow 40%,greenyellow 60%,transparent 60%)
+  ;
+  background-size: 15px;
+  background-position:-4px 0, 4px 0 ;
+  background-repeat:round;
+  opacity: 0.6;
 }
 .skillh{
+  margin-top: 30px;
   font-size: 30px;
   padding-left: 35px;
   background-image: url("icon-html.svg");
@@ -183,7 +323,14 @@ dd{
   display: flex;
   align-items: center;
 }
-dd div{
+.hh div{
+  margin-left: 1px;
+  background-color: rgb(233,109,49);
+  height: 13px;
+  border-radius: 8px;
+}
+.c div{
+
   margin-left: 1px;
   background-color: rgb(233,109,49);
   height: 13px;
@@ -193,6 +340,7 @@ dd div{
   background-color: rgb(19,161,209)
 }
 .skillc{
+  margin-top: 15px;
   font-size: 30px;
   padding-left: 35px;
   background-image: url("icon-css.svg");
@@ -231,34 +379,33 @@ a img{
 .last{
   background-color: red;
 }
+.m{
+width:600px;
+height:400px;
+margin: auto;
+}
 .o{
   display: flex;
   justify-content:space-between;
+  margin-bottom: 2px;
 }
 .a{
   max-width: 600px;
   margin: 0 auto;
 }
 .ok{
-  max-width: 600px;
   height: 600px;
-  display: flex;
 }
-.button{
-  display:block;
+table{
   width: 100%;
   height: 100%;
-  margin:0;
-  padding: 0;
+  border-collapse: collapse;
+}
+td{
   border: 1px solid black;
   cursor: pointer;
   background-color: white;
 }
-.d{
-  width: 12.72%;
-  height: 12.2%;
-}
-
 .h{
   margin-top: 53px;
   margin-left: 60px;
@@ -314,4 +461,38 @@ fieldset{
 }
 .dis{
   display: none;
+}
+.cl1,.cl2,.cl3,.cl4{
+  position: absolute;
+  height: 50%;
+  width: 50%;
+}
+.cl1{
+  top:0;
+  left:0;
+  border-radius: 0 50%;
+  background-image: linear-gradient(135deg,lightskyblue 90px,transparent 90px,transparent 130px,lightskyblue 130px,lightskyblue 160px,transparent 160px,transparent 180px,lightskyblue 180px);
+}
+.cl2{
+  top:0;
+  right: 0;
+  border-radius: 50% 0;
+  background-image: linear-gradient(225deg,lightskyblue 90px,transparent 90px,transparent 130px,lightskyblue 130px,lightskyblue 160px,transparent 160px,transparent 180px,lightskyblue 180px);
+}
+.cl3{
+  bottom:0;
+  left:0;
+  border-radius:50% 0;
+  background-image: linear-gradient(45deg,lightskyblue 90px,transparent 90px,transparent 130px,lightskyblue 130px,lightskyblue 160px,transparent 160px,transparent 180px,lightskyblue 180px);
+}
+.cl4{
+  bottom:0;
+  right: 0;
+  border-radius: 0 50%;
+  background-image: linear-gradient(315deg,lightskyblue 90px,transparent 90px,transparent 130px,lightskyblue 130px,lightskyblue 160px,transparent 160px,transparent 180px,lightskyblue 180px);
+}
+.navig a:hover{
+  border-color:white;
+  color:white;
+  transition: 0.3s;
 }
