--- a/css/style.css
+++ b/css/style.css
@@ -2888,7 +2888,7 @@ input[type="number"]::-webkit-inner-spin-button {
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 0.9);
-    transform: translateY(-100%);
+    transform: translateY(-120%);
     transition: transform 0.3s ease-in;
   }
   .is-active{
@@ -3444,12 +3444,7 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 
   .enabled-320px.exit {
-    position: absolute;
-    height: 29px;
-    width: 29px;
-    right: 0;
-    transform: translateX(120%);
-    transition: transform .3s ease-in;
+    display:none !important;
   }
   .search{
     max-width: 17px;
