--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,9 @@ picture image{
 	width: 1px !important;
 	overflow: hidden;
 }
+.aaaaaaaaaaaaaa{
+ display: none;
+}
 .swiper-button-prev.swiper-button-disabled{
   opacity: 0.5 !important;
   background-color: #666666  !important;
